--- a/PBOT_meetings/PBOT_mtg_2017-02-14.md
+++ b/PBOT_meetings/PBOT_mtg_2017-02-14.md
@@ -16,7 +16,7 @@ Sanjuro met with Emily and Damon from PBOT on Febrary 21st
 * They are working on having the maintenance group will have their own map
 
 ### Priorities
-* Conflict notifications.  Anything that will provide them with the ability to identify collisions.
+* Conflict notifications.  Anything that will provide them with the ability to identify collisions.  This is the one thing that will really help them out.
 * Map that helps identify other projects at a location with date and source filters.  As you enter an address, projects in that location in a similar time frame will populate the map.
 * Data entry ffor overlaying changes to existing points or making new ones.  This would help fill the gaps we have in e.g. dates in the CIP Points API.
 
