--- a/PBOT_meetings/PBOT_mtg_2017-02-14.md
+++ b/PBOT_meetings/PBOT_mtg_2017-02-14.md
@@ -14,6 +14,7 @@ Sanjuro met with Emily and Damon from PBOT on Febrary 21st
 * Damon will be waze liaison, he made the patchathon map
 * They are working on an emergency closure map
 * They are working on having the maintenance group will have their own map
+* There isn't much value for them in putting multple projects on a single map.  They can do this pretty well with ArcGIS, with a few bells and whistles that would take us a long time to produce.
 
 ### Priorities
 * Conflict notifications.  Anything that will provide them with the ability to identify collisions.  This is the one thing that will really help them out.
